# ts-spect-compiler

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.sh  generate_cover_class.py  setup_env  ts_sw_setup.yml
.github/workflows/: build-docs.yaml  build-release-binaries.yaml  build-release-docker.yaml  build.yaml  correct-submodule-urls.yaml  main.yaml  main.yml
Dockerfiles/: Dockerfile
doc/ISAv0.1/: isav0.1.tex  isav0.1_spect_instruction_encoding.tex
doc/ISAv0.2/: isav0.2.tex
doc/programmer_guide/: spect_instruction_encoding.tex  spect_programmer_guide.tex  spect_programmers_guide.tex
doc/programmer_guide/ISAv0.1/: spect_mem_map.tex  spect_programmer_guide_v0.1.tex
doc/programmer_guide/ISAv0.1/img/: images.drawio
doc/programmer_guide/ISAv0.2/: spect_programmer_guide_v0.2.tex
doc/programmer_guide/img/: .$images.drawio.bkp  .$images.drawio.dtmp  images.drawio
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  spect_compiler.cpp  spect_iss.cpp
src/common/: CMakeLists.txt  Sha512.cpp  Sha512.h
src/cosim/: CMakeLists.txt  spect_coverage.svh  spect_instr_gen_coverage.svh  spect_iss_dpi.cpp  spect_iss_dpi.h  spect_iss_dpi.svh  spect_iss_dpi_pkg.sv  spect_iss_dpi_types.h  spect_iss_dpi_types.svh  spect_iss_lib.cpp  spect_iss_lib.h
src/spect_lib/: CMakeLists.txt  Compiler.cpp  Compiler.h  CpuModel.cpp  CpuModel.h  CpuProgram.cpp  CpuProgram.h  CpuSimulator.cpp  CpuSimulator.h  HexHandler.cpp  HexHandler.h  Instruction.cpp  Instruction.h  InstructionDefs.cpp  InstructionDefs.h  InstructionDefs.txt  InstructionDefsV1.cpp  InstructionDefsV2.cpp  InstructionFactory.cpp  InstructionFactory.h  InstructionI.cpp  InstructionI.h  InstructionJ.cpp  InstructionJ.h  InstructionM.cpp  InstructionM.h  InstructionR.cpp  InstructionR.h  KeyMemory.cpp  KeyMemory.h  SourceFile.cpp  SourceFile.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  ordt_pio.cpp  ordt_pio.hpp  ordt_pio_common.cpp  ordt_pio_common.hpp  (+3 more)
templates/: InstructionDefs.txt  InstructionDefs_v1.txt  InstructionDefs_v2.txt  coverage_class_template.txt
test/: CMakeLists.txt  example.s
test/dpi/: CMakeLists.txt  dpi_simple_test.cpp  dpi_simple_test.s  iss_lib_simple_test.cpp  iss_lib_simple_test.s
test/timing/: CMakeLists.txt  check_duration.sh  mulp_loop_test.s
test/unit/: CMakeLists.txt  cond_defs_1.s  cond_defs_2.s  cond_defs_3.s  dummy_piece.s  eq_test.s  i_type_test.s  include_test.s  isa_v2_test.s  type_i_test.s  type_j_test.s  type_m_test.s  type_r_test.s
test/unit/golden/: cond_defs_1.hex  cond_defs_3.hex  eq_test.hex  include_test.hex  isa_v2_test.hex  type_i_test.hex  type_j_test.hex  type_m_test.hex  type_r_test.hex
